# fhwa2_viz

./: .gitignore  2012-11-13-23-49-39.bag  README.md  fhwa2.vcg  fhwa2_viz.rosinstall  stack.xml  to_do.txt  todo.txt  useful_commands.txt
fhwa2_MOOS_to_ROS/: CMakeLists.txt  fhwa2viz.sublime-project  fhwa2viz.sublime-workspace  mainpage.dox  manifest.xml  rviz_config.vcg  to_do.txt
fhwa2_MOOS_to_ROS/cfg/: camera.yaml  config.yaml  dsrc.yaml  gavlab.yaml  kapsch.yaml  pennst.yaml  sri.yaml  survey.yaml
fhwa2_MOOS_to_ROS/launch/: fhwa2.vcg  live.launch  live_4subs.launch  live_cpp.launch  playback.launch  playback_cpp.launch  run_everything.launch
fhwa2_MOOS_to_ROS/mesh/: 2004_Infiniti_G35_sedan.dae  NCAT_UTM_Plane_03_stripe_planes_colored.dae  NCAT_UTM_Plane_03_stripe_planes_colored_01.stl  NCAT_UTM_Plane_03_stripe_planes_colored_01_boxed.dae  NCAT_UTM_Plane_09_applycolors.stl  NCAT_UTM_Plane_10_linesOnly_stripesOnly.dae  NCAT_datum_centered_01_plane_minimal.blend  NCAT_datum_centered_01_plane_minimal.blend1  NCAT_datum_centered_01_plane_minimal.blend2  NCAT_datum_centered_01_plane_minimal.stl  NCAT_datum_centered_01_plane_minimal_OH_GOD.blend  NCAT_datum_centered_01_plane_minimal_OH_GOD.blend1  NCAT_datum_centered_01_plane_minimal_OH_GOD.stl  NCAT_lane_markings.stl  NCAT_pavement_plane.stl  giant_cube_in_the_center.stl
fhwa2_MOOS_to_ROS/mission/: playback.moos
fhwa2_MOOS_to_ROS/msg/: FourWheels.msg  G35CAN.msg  MOOSrosmsg.msg  SuspensionDeflection.msg
fhwa2_MOOS_to_ROS/scripts/: LL2UTM.py  bridge.py  bridge_tf.py  camBridge.py  config.ini  config.yaml  guiBridge.py  imuBridge.py  (+13 more)
fhwa2_description/: mainpage.dox  manifest.xml
fhwa2_error/: mainpage.dox  manifest.xml
fhwa2_gui/: CMakeLists.txt  mainpage.dox  manifest.xml  plugin.xml  plugin_description.xml  rviz_plugin.xml
fhwa2_gui/cfg/: fhwa2.perspective  fhwa2_small_resolution.perspective
fhwa2_gui/include/: error_panel.h  error_widget.h  menu_panel.h  plot_widget.h
fhwa2_gui/msg/: ECEFpos.msg  PoseError.msg
fhwa2_gui/rviz/: cpp.vcg  fhwa2.vcg  imu.vcg  rqt.vcg  survey.vcg
fhwa2_gui/scripts/: error.ui  errorplot.py  fhwa2_rqt_gui.py  menu.py  poseError.py  rvizBridge.py  rxplotter.bash
fhwa2_gui/scripts/fhwa2_gui/: FHWA2.ui  fhwa2_plugin.py
fhwa2_gui/src/: error_panel.cpp  fhwa2_displays_panel.cpp  fhwa2_displays_panel.h  fhwa2_menu_panel.cpp  fhwa2_menu_panel.h  interactive_marker_server.cpp  menu_panel.cpp  plot_widget.cpp  poseError.py  rvizBridge.py  solution_selector_server.py  splitter.py
fhwa2_gui/src/fhwa2_gui/: MatPlot.ui  NumSat.ui  mat_data_plot.py  mat_plot.py  num_sat.py  rosplot.py  ui_MatPlot.py  ui_NumSat.py
fhwa2_gui/src/fhwa2_gui/msg/: _ECEFpos.py  _MoosSplit.py  _PointError.py  _PoseError.py  __init__.py
fhwa2_gui/src/fhwa2_gui/palette/: red.py  white.py  yellow.py
fhwa2_gui/src/fhwa2_gui/srv/: _SolutionEnable.py  _SolutionSelect.py  __init__.py
fhwa2_gui/srv/: SolutionEnable.srv  SolutionSelect.srv
fhwa2_gui/srv_gen/cpp/include/fhwa2_gui/: SolutionEnable.h  SolutionSelect.h
fhwa2_gui/srv_gen/lisp/: SolutionEnable.lisp  SolutionSelect.lisp  _package.lisp  _package_SolutionEnable.lisp  _package_SolutionSelect.lisp  fhwa2_gui-srv.asd
fhwa2_launch/: mainpage.dox  manifest.xml
fhwa2_survey/: mainpage.dox  manifest.xml
misc_scripts/: mainpage.dox  manifest.xml
rviz_plugin_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml
(+111 files in other folders)
